# music_app

./: .gitignore  CHECKLIST.md  CODE_EXAMPLES.md  CODE_IMPROVEMENTS_DONE.md  CODE_REVIEW.md  ERROR_HANDLING_REPORT.md  FIX_LATENCY_REPORT.md  FIX_PLAN.md  HOW_TO_USE_IMPROVEMENTS.md  IMPLEMENTATION_DONE.txt  IMPROVEMENTS_SUMMARY.md  PROJECT_WALKTHROUGH.md  QUICK_REFERENCE.md  WORKERS_ERROR_PATTERNS.md  WORKERS_UPDATE_SUMMARY.md  audio_utils.py  beats_madmom.py  config.py  generate_pairwise.py  main.py  midi_quantize.py  midi_reduce.py  midi_test.py  models.py  output.mid  pipeline.py  player.py  pyproject.toml  q  separation.py  staff.py  test.py  test_latency.py  test_params.json  todo.txt  transcription_basic_pitch.py  update.py
alembic/: env.py
alembic/versions/: 9354bb62dce8_create_topic.py  9d2e6b2d1f3a_add_description_and_numeric_difficulty_to_lessons.py  add_hand_field_to_lesson.py  c3bb436bece8_create_lessons.py  dbc24f3df739_lesson_order_and_progress.py  f61b1628866b_merge_heads.py  f7119faf82a8_initial_migration.py
app/: APIworker.py  config.py  loader.py  main.py  staff.py  test.py
app/GUI/: LessonCard.py  auth.py  creator.py  helpful.py  lesson_list_item.py  main_window.py
app/controllers/: admin.py  auth.py  creator.py  lesson_player.py  main_window.py  profile.py  settings.py
app/ui/: auth.ui  creator.ui  main.ui  register.py  staff_buttons.py
app/workers/: admin_stats_worker.py  auth_worker.py  base_worker.py  lesson_worker.py  progress_worker.py  topic_worker.py
schemas/: admin_stats.py  auth.py  lesson.py  profile_stats.py  role.py  topic.py
server/: app.py  config.py  db.py  models.py
server/api/: __init__.py  admin_stats.py  auth.py  (+4 more)
ui/: staff_buttons.py
(+13 files in other folders)
