[project]
name = "music-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "midi2audio",
    "musicpy>=7.11",
    "numpy>=2.4.2",
    "pyqt6>=6.10.2",
    "pysynth",
    "scipy>=1.17.0",
    "sounddevice>=0.5.5",
]

[tool.uv.sources]
pysynth = { git = "https://github.com/mdoege/PySynth.git" }
