[project]
name = "music-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.3",
    "asyncpg>=0.31.0",
    "fastapi>=0.128.4",
    "midi2audio",
    "musicpy>=7.11",
    "numpy>=2.4.2",
    "passlib>=1.7.4",
    "pydantic[email]",
    "pydantic-settings>=2.12.0",
    "pyqt6>=6.10.2",
    "pysynth",
    "scipy>=1.17.0",
    "sounddevice>=0.5.5",
    "sqlalchemy",
    "uvicorn>=0.40.0",
    "keyring>=25.7.0",
    "python-jose>=3.5.0",
    "keyrings-alt>=5.0.2",
]

[tool.uv.sources]
pysynth = { git = "https://github.com/mdoege/PySynth.git" }
